# Driveproject-public

./: README.md
drive-project-main/: CMakeLists.txt  Dockerfile.app  Dockerfile.reactclient  Dockerfile.server  Dockerfile.tests  README.md  docker-compose-clients.yml  docker-compose.yml  package.json
drive-project-main/src/client/: CppClientMain.cpp  PythonClient.py
drive-project-main/src/commands/: AddCommand.cpp  AddCommand.h  GetCommand.cpp  GetCommand.h  ICommand.h  SearchCommand.cpp  SearchCommand.h
drive-project-main/src/core/: CLIMenu.cpp  IMenu.h  app.cpp  main.cpp
drive-project-main/src/input/: AddInput.cpp  DeleteInput.cpp  GetInput.cpp  InputManager.cpp  SearchInput.cpp
drive-project-main/src/react-client/: package-lock.json
drive-project-main/src/react-client/src/: App.js  MainLayout.js
drive-project-main/src/server/: ClientHandler.cpp  ClientHandler.h  ClientInfo.h  ThreadPoolDispatcher.cpp  ThreadPoolDispatcher.h
drive-project-main/src/storage/: ConstStorageDispatcher.cpp  storageManager.cpp  storageManager.h
drive-project-main/src/web-server/: app.js  integration.js
drive-project-main/src/web-server/controllers/: users.js
drive-project-main/src/web-server/models/: files.js
drive-project-main/src/web-server/routes/: users.js
drive-project-main/tests/: AddCommandTests.cpp  ConstSmDispatcherTests.cpp  GetCommandTests.cpp  SearchCommandTests.cpp  StorageManagerTests.cpp  ThreadPoolTests.cpp
drive-project-main/tests/input/: AddInputTests.cpp  DeleteInputTests.cpp  GetInputTests.cpp  InputManagerTests.cpp  SearchInputTests.cpp
(+35 files in other folders)
